fix zh_cn.json and en_us.json

--- a/src/main/resources/assets/tfcaf/lang/en_us.json
+++ b/src/main/resources/assets/tfcaf/lang/en_us.json
@@ -3,5 +3,5 @@
   "key.eternal130.switchAutoForging.info":"automatic forging function has been toggled to %s",
   "key.eternal130.switchForgingTip":"Switch forging tip function",
   "key.eternal130.switchForgingTip.info":"forging tip function has been toggled to %s",
-  "key.categories.tfcaf":"tfcplus auto forging"
+  "key.categories.tfcaf":"tfctng auto forging"
 }
