fix zh_cn.lang and en_us.lang

--- a/src/main/resources/assets/tfcaf/lang/zh_CN.lang
+++ b/src/main/resources/assets/tfcaf/lang/zh_CN.lang
@@ -2,4 +2,4 @@ key.eternal130.switchAutoForging=切换自动锻造功能开闭
 key.eternal130.switchAutoForging.info=自动锻造功能已被切换为 %s
 key.eternal130.switchForgingTip=切换锻造提示功能开闭
 key.eternal130.switchForgingTip.info=锻造提示功能已被切换为 %s
-key.categories.tfcaf=群峦plus自动锻造
+key.categories.tfcaf=群峦自动锻造
